<resources>
    <string name="app_name">Unite This City</string>
    <string name="result_activity">ResultActivity</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="home_logo">Home logo</string>
    <string name="header_logo">Header logo</string>
    <string name="city">CLEVELAND</string>
    <string name="signup_already_joined"><u>ALREADY JOINED? SIGN IN</u></string>
    <string name="signup_skip"><u>SKIP THIS STEP</u></string>
    <string name="signup_note_1">PLEASE NOTE: MEMBERSHIP IS FREE</string>
    <string name="signup_note_2">AND IS REQUIRED TO SAVE AT LOCAL BUSINESSES</string>
    <string name="button_wallet_description">Wallet button</string>
    <string name="button_favorite_description">Favorite button</string>
    <string name="button_utc_description">UTC button</string>
    <string name="button_inbox_description">Inbox button</string>
    <string name="button_search_description">Search button</string>
    <string name="button_signup_email">SIGN UP WITH EMAIL</string>
    <string name="button_signup_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="wallet">WALLET</string>
    <string name="wallet_name_nonmember">HEY YOU</string>
    <string name="wallet_greeting">WELCOME TO YOUR WALLET</string>
    <string name="wallet_default_amount">$0.00</string>
    <string name="wallet_cash_available">UTC CASH AVAILABLE</string>
    <string name="wallet_personal_cash_savings">YOUR PERSONAL CASH SAVINGS</string>
    <string name="wallet_cash_savings_this_month">THIS MONTH</string>
    <string name="wallet_cash_savings_all_time">ALL TIME</string>
    <string name="wallet_check_ins">OVERALL POINTS EARNED</string>
    <string name="wallet_default_points">BECOME A MEMBER TO EARN POINTS</string>
    <string name="wallet_bottom_description1">EVERY CHECK IN EARNS YOU ADDITIONAL POINTS</string>
    <string name="wallet_bottom_description2">EVERY POINT YOU EARN ENTERS YOU IN OUR MONTHLY PRIZE DRAWING AND COUNTS AS A CHANCE TO WIN</string>
    <string name="splash_description">Splash screen image</string>
    <string name="wallet_members_only">AVAILABLE TO MEMBERS ONLY</string>
    <string name="favorites">FAVORITES</string>
    <string name="favorites_none">NO FAVORITES YET</string>
    <string name="favorites_none_message">Find businesses and favorite them. They\'ll show up here.</string>
    <string name="location_details">DETAILS</string>
    <string name="location_redeem">REDEEM</string>
    <string name="location_already_redeemed">ALREADY REDEEMED</string>
    <string name="location_arrow">\></string>
    <string name="redeem">WHAT\'S NEARBY</string>
    <string name="redeem_business">BUSINESS INFO</string>
    <string name="redeem_business_more_info">MORE INFO</string>
    <string name="redeem_where_are_you">WHERE ARE YOU?</string>
    <string name="redeem_not_physical_location">I AM NOT AT A PHYSICAL LOCATION</string>
    <string name="redeem_rating_description">Location rating from one to ten</string>
    <string name="redeem_want_to_redeem_cash">WANT TO REDEEM YOUR UTC CASH?</string>
    <string name="redeem_options">YOU HAVE TWO OPTIONS</string>
    <string name="redeem_scan_code">SCAN THE MERCHANT\'S CODE</string>
    <string name="redeem_tap">TAP HERE  &gt;</string>
    <string name="redeem_let_merchant">OR LET THE MERCHANT</string>
    <string name="redeem_scan_your_code">SCAN YOUR CODE</string>
    <string name="redeem_you_just_check_in">DO YOU JUST WANT TO CHECK IN?</string>
    <string name="redeem_phone">Phone:</string>
    <string name="redeem_website">Website:</string>
    <string name="redeem_utc_cash">UTC CASH</string>
    <string name="redeem_available">AVAILABLE</string>
    <string name="redeem_terms">TERMS &amp; CONDITIONS</string>
    <string name="redeem_zero_dollars">$0</string>
    <string name="redeem_rate_this_business">RATE THIS BUSINESS</string>
    <string name="redeem_tap_rate_it">TAP RATE IT TO SAVE</string>
    <string name="redeem_cancel_tip">CANCEL</string>
    <string name="redeem_sign_in_guest">SIGN IN</string>
    <string name="redeem_join_now_guest">JOIN NOW</string>
    <string name="redeem_ok_guest">OK</string>
    <string name="redeem_post_tip">POST</string>
    <string name="redeem_leave_a_tip">LEAVE A TIP</string>
    <string name="redeem_post_review">POST REVIEW</string>
    <string name="redeem_guest_sorry">We\'re sorry. This is a member\'s only feature.</string>
    <string name="redeem_guest_become_member">Would you like to become a member and receive hundreds of dollars worth of UTC cash each month?</string>
    <string name="redeem_utc_social_deal">UTC SOCIAL DEAL</string>
    <string name="redeem_utc_loyalty_deal">UTC LOYALTY DEAL</string>
    <string name="redeem_status">AVAILABLE</string>
    <string name="redeem_earn_point">EARN POINT</string>
    <string name="redeem_member_reviews">MEMBER REVIEWS</string>
    <string name="redeem_more_info_button_gallery">GALLERY</string>
    <string name="redeem_more_info_button_menu">MENU</string>
    <string name="redeem_more_info_button_calendar">CALENDAR</string>
    <string name="redeem_more_info_menu_item">ITEM</string>
    <string name="redeem_more_info_menu_item_price">PRICE</string>
    <string name="redeem_more_info_view_menu_online">VIEW MENU ONLINE</string>
    <string name="redeem_review">REVIEW THIS BUSINESS</string>
    <string name="redeem_button_review_cancel">CANCEL</string>
    <string name="redeem_button_review_post">POST REVIEW</string>
    <string name="message_details_new">NEW</string>
    <string name="message_details_read_more">READ MORE</string>
    <string name="event_details_read_more">READ MORE</string>
    <string name="account">ACCOUNT</string>
    <string name="account_password">PASSWORD</string>
    <string name="account_email_hint">email address</string>
    <string name="account_current_user">CURRENT USER</string>
    <string name="account_guest_user">Guest User</string>
    <string name="account_sign_in">SIGN IN</string>
    <string name="account_sign_out">SIGN OUT</string>
    <string name="account_cancel">CANCEL</string>
    <string name="account_login">LOGIN</string>
    <string name="account_sign_in_to_utc">SIGN IN TO UTC</string>
    <string name="account_sign_in_use_credentials">Use your email address and password to sign in.</string>
    <string name="account_read_more">READ MORE</string>
    <string name="account_view_tutorial">VIEW TUTORIAL</string>
    <string name="account_join_now">JOIN NOW</string>
    <string name="account_sign_up_email">SIGN UP WITH EMAIL</string>
    <string name="account_sign_up_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="account_not_a_member">NOT A MEMBER YET?</string>
    <string name="account_description">Become a member and start saving at local stores, restaurants, service providers and entertainment venues. UTC Deals are exclusive to members, and membership is FREE! You\'ll also have opportunities to win UTC sponsored prizes, including trips, shopping sprees and high-tech gear. And that\'s just the beginning. Sign up now and save!</string>
    <string name="account_social_sharing_prefs">SHARING PREFERENCES</string>
    <string name="account_social_sharing_description">TAP THE SOCIAL SHARING ICON BELOW TO CONNECT YOUR ACCOUNT AND EARN UTC POINTS.</string>
    <string name="account_default_social_description">TAP A SOCIAL SHARING ICON BELOW TO SET YOUR DEFAULT SOCIAL SHARING PREFERENCE</string>
    <string name="account_social_sharing_earn">EARN POINTS FOR CONNECTING YOUR FACEBOOK ACCOUNT</string>
    <string name="account_social_point_description">EVERY POINT YOU EARN ENTERS YOU IN OUR MONTHLY PRIZE DRAWING AND COUNTS AS A CHANCE TO WIN</string>
    <string name="search">SEARCH</string>
    <string name="search_business">SEARCH BUSINESSES</string>
    <string name="search_event">EVENTS</string>
    <string name="search_refine">REFINE</string>
    <string name="search_refine_search">REFINE SEARCH</string>
    <string name="search_refine_by_category">BY CATEGORY</string>
    <string name="search_filter">FILTER YOUR RESULTS <b>BY CATEGORY</b></string>
    <string name="search_refine_select_all">SELECT ALL</string>
    <string name="search_refine_select_none">SELECT NONE</string>
    <string name="search_refine_apply">APPLY</string>
    <string name="search_businesses">SEARCH BUSINESSES</string>
    <string name="search_events">SEARCH EVENTS</string>
    <string name="search_specials">SEARCH SPECIALS</string>
    <string name="search_entertainers">SEARCH ENTERTAINERS</string>
    <string name="search_keyword">Search by keyword</string>
    <string name="search_keyword_detail">Search by city, zip, business name</string>
    <string name="search_date">Search for events near date</string>
    <string name="search_keyword_go">GO</string>
    <string name="search_keyword_cancel">CANCEL</string>
    <string name="search_keyword_by_category">SEARCH BY CATEGORY</string>
    <string name="search_by_keyword">SEARCH BY KEYWORD</string>
    <string name="search_by_category">SEARCH BY CATEGORY</string>
    <string name="search_event_date_button">...</string>
    <string name="category_select">SELECT</string>
    <string name="business">BUSINESSES</string>
    <string name="business_button">VIEW YOUR BUSINESS</string>
    <string name="event">EVENT</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_redeem">REDEEM</string>
    <string name="dialog_loyalty">LOYALTY DEAL</string>
    <string name="dialog_check_in">CHECK IN</string>
    <string name="dialog_reviews">REVIEWS</string>
    <string name="dialog_ratings">RATINGS</string>
    <string name="dialog_favorites">FAVORITES</string>
    <string name="dialog_notifications">NOTIFICATIONS</string>
    <string name="dialog_loyalty_business">LOCAL BUSINESS</string>
    <string name="dialog_loyalty_congrats">Congratulations!</string>
    <string name="dialog_loyalty_earned_point">You just earned a loyalty point.</string>
    <string name="dialog_loyalty_share_local">SHARE LOCAL</string>
    <string name="dialog_loyalty_support">Support this local business by sharing on social media.</string>
    <string name="dialog_loyalty_share_twitter">SHARE ON TWITTER</string>
    <string name="dialog_loyalty_share_facebook">SHARE ON FACEBOOK</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="subscribe_title">Sign up and start saving today!</string>
    <string name="subscribe_description">UTC membership is about a commitment, action, loyalty and mutual support within our community. Together we have the power to strengthen our local economies, societies and charities. The more who participate, the greater the benefits for all, as we combine energies and resources to produce synergistic abundance. Unite This City.</string>
    <string name="subscribe_personal_information">ACCOUNT INFORMATION</string>
    <string name="subscribe_first_name">FIRST NAME</string>
    <string name="subscribe_last_name">LAST NAME</string>
    <string name="subscribe_email">E-MAIL</string>
    <string name="subscribe_zip_code">ZIP CODE</string>
    <string name="subscribe_gender">GENDER</string>
    <string name="subscribe_gender_male">MALE</string>
    <string name="subscribe_gender_female">FEMALE</string>
    <string name="subscribe_birthdate">BIRTHDATE</string>
    <string name="subscribe_birthdate_button">...</string>
    <string name="subscribe_promo_code">PROMO CODE</string>
    <string name="subscribe_verify">I agree to UTC\'s Terms and Conditions</string>
    <string name="subscribe_verify_terms">Find the Terms and Conditions here</string>
    <string name="subscribe_submit">JOIN NOW</string>
    <string name="subscribe_footer">UTC is currently only available in the United States.  All members must agree to the Unite This City Terms and Conditions.</string>
</resources>