<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutSearchCategories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/crumbSearchCategories"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/crumb_bar_fixed"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:text="@string/search_refine_search"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutCategoryFilterResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/crumbSearchCategories"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/filterCategoryResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_filter"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCategoryButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutCategoryFilterResults"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/buttonSelectAll"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="5"
            android:background="@drawable/btn_sign_up_email"
            android:text="@string/search_refine_select_all"
            android:textColor="#333333"
            android:textSize="10sp" />

        <Button
            android:id="@+id/buttonSelectNone"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="5"
            android:background="@drawable/btn_sign_up_email"
            android:text="@string/search_refine_select_none"
            android:textColor="#333333"
            android:textSize="10sp" />

        <Button
            android:id="@+id/buttonApply"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginRight="20dp"
            android:layout_weight="4"
            android:background="@drawable/btn_sign_up_email"
            android:text="@string/search_refine_apply"
            android:textColor="#333333"
            android:textSize="10sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewSearchCategories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutCategoryButtons" >

        <LinearLayout
            android:id="@+id/linearLayoutSearchCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>