<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutSubscribeParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/crumbSubscribe"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/crumb_bar_fixed"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:text="@string/subscribe"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollViewAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/crumbSubscribe"
        android:background="#B2B2B2" >

        <RelativeLayout
            android:id="@+id/relativeLayoutSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/subscribeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/subscribe_title"
                android:textColor="#535353"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeTitle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/subscribe_description"
                android:textColor="#535353"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribePersonalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeDescription"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/black"
                android:gravity="center"
                android:text="@string/subscribe_personal_information"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/subscribePersonalInformation"
                android:layout_marginLeft="10dp"
                android:text="@string/subscribe_first_name"
                android:textColor="#535353"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/subscribeFirstName"
                android:layout_alignLeft="@+id/editTextLastName"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_corners"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeFirstName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_last_name"
                android:textColor="#535353"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/subscribeLastName"
                android:layout_alignLeft="@+id/editTextEmail"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_corners"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeLastName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_email"
                android:textColor="#535353"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/subscribeEmail"
                android:layout_alignLeft="@+id/editTextZipCode"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_corners"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeEmail"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_zip_code"
                android:textColor="#535353"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/subscribeZipCode"
                android:layout_alignLeft="@+id/editTextPromoCode"
                android:background="@drawable/rounded_corners"
                android:inputType="number"
                android:lines="1"
                android:maxLength="5"
                android:maxLines="1"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:visibility="visible"
                android:width="100dp" />

            <TextView
                android:id="@+id/subscribeGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeZipCode"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_gender"
                android:textColor="#535353"
                android:visibility="visible" />
            
            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/subscribeGender"
                android:layout_alignLeft="@id/editTextPromoCode"
                android:layout_alignRight="@id/editTextPromoCode"
                android:layout_alignTop="@+id/subscribeGender"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/subscribe_gender_male"
                    android:textColor="#535353" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_gender_female"
                    android:textColor="#535353" />

            </RadioGroup>
            
            <TextView
                android:id="@+id/subscribeBirthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeGender"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_birthdate"
                android:textColor="#535353"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeBirthdateString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/buttonBirthdate"
                android:layout_alignLeft="@+id/radioGroupGender"
                android:layout_alignTop="@+id/subscribeBirthdate"
                android:layout_toLeftOf="@+id/buttonBirthdate"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#535353" />

            <Button
                android:id="@+id/buttonBirthdate"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignRight="@id/editTextPromoCode"
                android:layout_alignTop="@+id/subscribeBirthdate"
                android:background="@drawable/rounded_corners"
                android:text="@string/subscribe_birthdate_button"
                android:textColor="#333333"
                android:textSize="10sp" />
            
            <TextView
                android:id="@+id/subscribePromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonBirthdate"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_promo_code"
                android:textColor="#535353"
                android:visibility="visible" />

            <EditText
                android:id="@id/editTextPromoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/subscribePromoCode"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/subscribePromoCode"
                android:background="@drawable/rounded_corners"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBoxSubscribeVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribePromoCode"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe_verify"
                android:textColor="#535353"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/checkBoxSubscribeVerify"
                android:layout_below="@id/checkBoxSubscribeVerify"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/subscribe_verify_terms"
                android:textColor="#535353"
                android:textSize="12sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subscribeTerms"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/subscribe_footer"
                android:textColor="#535353"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonSubscribeSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/subscribeFooter"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/subscribe_submit"
                android:textColor="#333333"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subscribeSpacerBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonSubscribeSubmit"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="#535353"
                android:textSize="4sp"
                android:visibility="visible" />



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>